# HUME

./: .gitignore  CLAUDE.md  Cargo.toml  GOALS.md  JOURNAL.md  LEARNING.md  LICENSE  PLAN.md  README.md  ROADMAP.md
editor/: Cargo.toml
editor/proptest-regressions/: proptest_editor.txt
editor/src/: auto_pairs.rs  cursor.rs  helpers.rs  io.rs  lib.rs  main.rs  proptest_doc.rs  proptest_editor.rs  settings.rs  terminal.rs  testing.rs
editor/src/core/: buffer.rs  changeset.rs  document.rs  error.rs  grapheme.rs  history.rs  jump_list.rs  minibuf_history.rs  mod.rs  search_state.rs  selection.rs  text.rs  transaction.rs
editor/src/core/changeset/: builder.rs  mod.rs  tests.rs
editor/src/editor/: buffer.rs  buffer_store.rs  clipboard.rs  commands.rs  completion.rs  keymap.rs  mappings.rs  message_log.rs  minibuf.rs  mod.rs  mouse.rs  ops.rs  pane_state.rs  registry.rs  scroll.rs  search_state.rs  tests.rs  visual_move.rs
editor/src/editor/tests/: alternate.rs  auto_pairs.rs  buffer.rs  buffer_store.rs  cd.rs  command_mode.rs  commands.rs  completion.rs  dot_repeat.rs  file_io.rs  find.rs  hooks.rs  jump_list.rs  kitty.rs  list_buffers.rs  macros.rs  mod.rs  multi_pane.rs  page_scroll.rs  pane_sync.rs  per_pane_jumps.rs  search.rs  select_all.rs  surround.rs  view_scroll.rs  visual_move.rs
editor/src/ops/: edit.rs  mod.rs  motion.rs  pair.rs  register.rs  search.rs  selection_cmd.rs  surround.rs  text_object.rs
editor/src/ops/edit/: mod.rs  tests.rs
editor/src/ops/motion/: char_move.rs  find.rs  line.rs  line_select.rs  mod.rs  paragraph.rs  tests.rs  word.rs
editor/src/ops/text_object/: mod.rs  tests.rs
editor/src/os/: dirs.rs  fs.rs  io.rs  mod.rs  path.rs  process.rs  terminal.rs  unix.rs  windows.rs
editor/src/scripting/: hooks.rs  keys.rs  ledger.rs  mod.rs  tests.rs
editor/src/scripting/builtins/: buffers.rs  commands.rs  fs.rs  hooks.rs  ids.rs  (+7 more)
editor/src/ui/: completion_overlay.rs  gutter.rs  highlight.rs  highlight_providers.rs  mod.rs  renderer.rs  statusline.rs  theme.rs  view.rs  whitespace.rs
engine/: Cargo.toml  DESIGN.md  MIGRATION.md
engine/src/: format.rs  layout.rs  lib.rs  pane.rs  pipeline.rs  providers.rs  render.rs  style.rs  theme.rs  types.rs
engine/src/builtins/: line_number.rs  mod.rs  tree_sitter_hl.rs
engine/src/theme/: error.rs  loader.rs  mod.rs
(+92 files in other folders)
