[package]
name = "hume"
version = "0.1.0"
edition = "2024"

[dependencies]
ropey = "1.6.1"
unicode-segmentation = "1.12.0"
crossterm = "0.28"
ratatui = "0.29"
unicode-width = "0.2"
tempfile = "3"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }

[dev-dependencies]
pretty_assertions = "1.4.1"
proptest = "1.10.0"
insta = "1.41"
