[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
ropey.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
ratatui.workspace = true
bitflags = "2"
slotmap = "1"
tree-sitter = "0.24"
streaming-iterator = "0.1"
toml = { version = "0.8", default-features = false, features = ["parse"] }

[dev-dependencies]
tempfile = "3"
